--- a/styles.css
+++ b/styles.css
@@ -1,100 +1,16 @@
-.container {
-  position: absolute;
-  top: 5%;
-  z-index: 2;
-  width: 100%;
-}
-
-.hero-img-container {
-  height: 125px;
-  overflow: hidden;
-}
-
-.hero-img {
-    background-image: url("img/code.jpg");
-    filter: blur(4px);
-    height: 105%;
-    width: 105%;
-    margin: -8px;
- }
-
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Heebo', sans-serif;
+  background-color: rgb(31, 31, 31);
   padding: 0;
-  margin: 0;
+  margin: 100px;
 }
 
-.flex-container {
-  display: flex;
-  flex-wrap: nowrap;
-  width: 100%;
+h1 {
+  font-weight: bold;
+  color: aliceblue;
 }
 
-.spacer-left {
-  width: 60%;
-}
-
-.spacer-right {
-  width: 10%;
-}
-
-.navbar {
-  overflow: hidden;
-  width: 30%;
-}
-
-.nav-item {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.navbar a {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  display: inline-block;
-  vertical-align: middle;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-}
-
-.dropdown-content {
-  display: none;
-  z-index: 2;
-}
-
-.dropdown-content a {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: rgba(85, 30, 189, 0.402)
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  width: 100%;
+a, p {
+  font-style: none;
+  color: aliceblue
 }
