--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,21 @@ a, p {
   font-style: none;
   color: aliceblue
 }
+
+button {
+  background: transparent;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.quote-container {
+  width: 100%
+  max-height: 400px;
+  position: relative;
+}
