--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Heebo', sans-serif;
   background-color: rgb(31, 31, 31);
@@ -15,6 +19,10 @@ a, p {
   color: aliceblue
 }
 
+p {
+  font-size: 1.2em;
+}
+
 button {
   background: transparent;
   outline: none;
@@ -27,6 +35,52 @@ button {
   left: 0;
 }
 
+/* center .top-nav and remove style from list items */
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.top-nav > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding-bottom: 50px;
+}
+
+.top-nav > ul > li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.top-nav > ul > li > a {
+  text-decoration: none;
+  color: aliceblue;
+  font-size: 1.2em;
+  margin: 0 20px;
+}
+
+.top-nav > ul > li > a:hover {
+  color: rgb(68, 145, 222);
+}
+
+.top-nav > ul > li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .quote-container {
   width: 100%;
   max-width: 600px;
@@ -34,14 +88,11 @@ button {
   position: relative;
 }
 
-/* center .poem and make it full width */
-.container{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.poem-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
-  text-align: center;
 }
 
 /* use flex to make .poem-img and .poem-text sit next to each other */
@@ -49,11 +100,24 @@ button {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .poem-img {
+  width: 55%;
+  max-width: 500px;
+  margin-right: 5%;
+}
+
+.poem-img > a > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.poem-meta {
   width: 100%;
   max-width: 300px;
   height: 100%;
@@ -61,10 +125,12 @@ button {
   margin: 0 20px;
 }
 
-.poem-text {
-  width: 100%;
-  max-width: 300px;
-  height: 100%;
-  max-height: 300px;
-  margin: 0 20px;
+.poem-meta > h1 {
+  font-size: 2em;
+}
+
+.poem-date {
+  font-size: .9em;
+  color: rgb(68, 145, 222);
+  margin: 0;
 }
